wxc/include/ewxw/wxc_glue.h


void       wxClientDC_Delete( TSelf(wxClientDC) _obj );


/* wxCustomDataObject */
TClassDefExtend(wxCustomDataObject,wxDataObjectSimple)

/* wxDC */
TClassDefExtend(wxDC,wxObject)
void       wxDC_BeginDrawing( TSelf(wxDC) _obj );

int        wxDC_Blit( TSelf(wxDC) _obj, TRect(xdest,ydest,width,height), TClass(wxDC) source, TPoint(xsrc,ysrc), int rop, TBool useMask );

void       wxDC_CalcBoundingBox( TSelf(wxDC) _obj, TPoint(x,y) );

TBool      wxDC_CanDrawBitmap( TSelf(wxDC) _obj );

TBool      wxDC_CanGetTextExtent( TSelf(wxDC) _obj );

void       wxDC_Clear( TSelf(wxDC) _obj );

void       wxDC_CrossHair( TSelf(wxDC) _obj, TPoint(x,y) );

void       wxDC_Delete( TSelf(wxDC) _obj );

void       wxDC_DestroyClippingRegion( TSelf(wxDC) _obj );

int        wxDC_DeviceToLogicalX( TSelf(wxDC) _obj, int x );

int        wxDC_DeviceToLogicalXRel( TSelf(wxDC) _obj, int x );

int        wxDC_DeviceToLogicalY( TSelf(wxDC) _obj, int y );

int        wxDC_DeviceToLogicalYRel( TSelf(wxDC) _obj, int y );

void       wxDC_DrawArc( TSelf(wxDC) _obj, TPoint(x1,y1), TPoint(x2,y2), TPoint(xc,yc) );

void       wxDC_DrawBitmap( TSelf(wxDC) _obj, TClass(wxBitmap) bmp, TPoint(x,y), TBool useMask );

void       wxDC_DrawCheckMark( TSelf(wxDC) _obj, TRect(x,y,width,height) );

void       wxDC_DrawCircle( TSelf(wxDC) _obj, TPoint(x,y), int radius );

void       wxDC_DrawEllipse( TSelf(wxDC) _obj, TRect(x,y,width,height) );

void       wxDC_DrawEllipticArc( TSelf(wxDC) _obj, TRect(x,y,w,h), double sa, double ea );

void       wxDC_DrawIcon( TSelf(wxDC) _obj, TClass(wxIcon) icon, TPoint(x,y) );

void       wxDC_DrawLine( TSelf(wxDC) _obj, TPoint(x1,y1), TPoint(x2,y2) );

void       wxDC_DrawLines( TSelf(wxDC) _obj, int n, void* x, void* y, TPoint(xoffset,yoffset) );

void       wxDC_DrawPoint( TSelf(wxDC) _obj, TPoint(x,y) );

void       wxDC_DrawPolygon( TSelf(wxDC) _obj, int n, void* x, void* y, TPoint(xoffset,yoffset), int fillStyle );

void       wxDC_DrawRectangle( TSelf(wxDC) _obj, TRect(x,y,width,height) );

void       wxDC_DrawRotatedText( TSelf(wxDC) _obj, TStringVoid text, TPoint(x,y), double angle );

void       wxDC_DrawRoundedRectangle( TSelf(wxDC) _obj, TRect(x,y,width,height), double radius );

void       wxDC_DrawText( TSelf(wxDC) _obj, TStringVoid text, TPoint(x,y) );

void       wxDC_EndDoc( TSelf(wxDC) _obj );

void       wxDC_EndDrawing( TSelf(wxDC) _obj );

void       wxDC_EndPage( TSelf(wxDC) _obj );

void       wxDC_FloodFill( TSelf(wxDC) _obj, TPoint(x,y), TClass(wxColour) col, int style );

void       wxDC_GetBackground( TSelf(wxDC) _obj, TClassRef(wxBrush) _ref );

int        wxDC_GetBackgroundMode( TSelf(wxDC) _obj );

void       wxDC_GetBrush( TSelf(wxDC) _obj, TClassRef(wxBrush) _ref );

int        wxDC_GetCharHeight( TSelf(wxDC) _obj );

int        wxDC_GetCharWidth( TSelf(wxDC) _obj );

void       wxDC_GetClippingBox( TSelf(wxDC) _obj, TRectOutVoid(_x,_y,_w,_h) );

int        wxDC_GetDepth( TSelf(wxDC) _obj );

void       wxDC_GetDeviceOrigin( TSelf(wxDC) _obj, TPointOutVoid(_x,_y) );

void       wxDC_GetFont( TSelf(wxDC) _obj, TClassRef(wxFont) _ref );

int        wxDC_GetLogicalFunction( TSelf(wxDC) _obj );

void       wxDC_GetLogicalOrigin( TSelf(wxDC) _obj, TPointOutVoid(_x,_y) );

void       wxDC_GetLogicalScale( TSelf(wxDC) _obj, TPointOutVoid(_x,_y) );

int        wxDC_GetMapMode( TSelf(wxDC) _obj );

int        wxDC_GetOptimization( TSelf(wxDC) _obj );

void       wxDC_GetPPI( TSelf(wxDC) _obj, TSizeOutVoid(_w,_h) );

void       wxDC_GetPen( TSelf(wxDC) _obj, TClassRef(wxPen) _ref );

TBoolInt   wxDC_GetPixel( TSelf(wxDC) _obj, TPoint(x,y), TClass(wxColour) col );

void       wxDC_GetSize( TSelf(wxDC) _obj, TSizeOutVoid(_w,_h) );

void       wxDC_GetSizeMM( TSelf(wxDC) _obj, TSizeOutVoid(_w,_h) );

void       wxDC_GetTextBackground( TSelf(wxDC) _obj, TClassRef(wxColour) _ref );

void       wxDC_GetTextExtent( TSelf(wxDC) _obj, TStringVoid string, void* x, void* y, void* descent, void* externalLeading, TClass(wxFont) theFont );

void       wxDC_GetTextForeground( TSelf(wxDC) _obj, TClassRef(wxColour) _ref );

void       wxDC_GetUserScale( TSelf(wxDC) _obj, void* x, void* y );

int        wxDC_LogicalToDeviceX( TSelf(wxDC) _obj, int x );

int        wxDC_LogicalToDeviceXRel( TSelf(wxDC) _obj, int x );

int        wxDC_LogicalToDeviceY( TSelf(wxDC) _obj, int y );

int        wxDC_LogicalToDeviceYRel( TSelf(wxDC) _obj, int y );

int        wxDC_MaxX( TSelf(wxDC) _obj );

int        wxDC_MaxY( TSelf(wxDC) _obj );

int        wxDC_MinX( TSelf(wxDC) _obj );

int        wxDC_MinY( TSelf(wxDC) _obj );

TBool      wxDC_Ok( TSelf(wxDC) _obj );

void       wxDC_ResetBoundingBox( TSelf(wxDC) _obj );

void       wxDC_SetAxisOrientation( TSelf(wxDC) _obj, TBoolInt xLeftRight, TBoolInt yBottomUp );

void       wxDC_SetBackground( TSelf(wxDC) _obj, TClass(wxBrush) brush );

void       wxDC_SetBackgroundMode( TSelf(wxDC) _obj, int mode );

void       wxDC_SetBrush( TSelf(wxDC) _obj, TClass(wxBrush) brush );

void       wxDC_SetClippingRegion( TSelf(wxDC) _obj, TRect(x,y,width,height) );

void       wxDC_SetClippingRegionFromRegion( TSelf(wxDC) _obj, TClass(wxRegion) region );

void       wxDC_SetDeviceOrigin( TSelf(wxDC) _obj, TPoint(x,y) );

void       wxDC_SetFont( TSelf(wxDC) _obj, TClass(wxFont) font );

void       wxDC_SetLogicalFunction( TSelf(wxDC) _obj, int function );

void       wxDC_SetLogicalOrigin( TSelf(wxDC) _obj, TPoint(x,y) );

void       wxDC_SetLogicalScale( TSelf(wxDC) _obj, double x, double y );

void       wxDC_SetMapMode( TSelf(wxDC) _obj, int mode );

void       wxDC_SetOptimization( TSelf(wxDC) _obj, int opt );

void       wxDC_SetPalette( TSelf(wxDC) _obj, TClass(wxPalette) palette );

void       wxDC_SetPen( TSelf(wxDC) _obj, TClass(wxPen) pen );

void       wxDC_SetTextBackground( TSelf(wxDC) _obj, TClass(wxColour) colour );

void       wxDC_SetTextForeground( TSelf(wxDC) _obj, TClass(wxColour) colour );

void       wxDC_SetUserScale( TSelf(wxDC) _obj, double x, double y );

int        wxDC_StartDoc( TSelf(wxDC) _obj, TStringVoid msg );

void       wxDC_StartPage( TSelf(wxDC) _obj );

TClass(wxMemoryDC) wxMemoryDC_CreateCompatible( TClass(wxDC) dc );

void       wxMemoryDC_Delete( TSelf(wxMemoryDC) _obj );

void       wxMemoryDC_SelectObject( TSelf(wxMemoryDC) _obj, TClass(wxBitmap) bitmap );


/* wxMetafile */
TClassDefExtend(wxMetafile,wxObject)
TClass(wxMetafile) wxMetafile_Create( TStringVoid _file );

void       wxMetafile_Delete( TSelf(wxMetafile) _obj );

TBool      wxMetafile_Ok( TSelf(wxMetafile) _obj );

TBool      wxMetafile_Play( TSelf(wxMetafile) _obj, TClass(wxDC) _dc );

TBool      wxMetafile_SetClipboard( TSelf(wxMetafile) _obj, TSize(width,height) );


/* wxMetafileDC */
TClassDefExtend(wxMetafileDC,wxDC)
void*      wxMetafileDC_Close( TSelf(wxMetafileDC) _obj );

TClass(wxMetafileDC) wxMetafileDC_Create( TStringVoid _file );

void       wxMetafileDC_Delete( TSelf(wxMetafileDC) _obj );


/* wxPaintDC */
TClassDefExtend(wxPaintDC,wxWindowDC)
TClass(wxPaintDC) wxPaintDC_Create( TClass(wxWindow) win );

void       wxPaintDC_Delete( TSelf(wxPaintDC) _obj );

void       wxScreenDC_Delete( TSelf(wxScreenDC) _obj );

int        wxScreenDC_EndDrawingOnTop( TSelf(wxScreenDC) _obj );

int        wxScreenDC_StartDrawingOnTop( TSelf(wxScreenDC) _obj, int l, int t, TSize(w,h) );

int        wxScreenDC_StartDrawingOnTopOfWin( TSelf(wxScreenDC) _obj, TClass(wxWindow) win );


/* wxWindowDC */
TClassDefExtend(wxWindowDC,wxDC)
TClass(wxWindowDC) wxWindowDC_Create( TClass(wxWindow) win );

void       wxWindowDC_Delete( TSelf(wxWindowDC) _obj );